2005-10-04:
	* configure.ac: only trust 'krb5-config --libs krb4' to provide krb4
	if '-lkrb4' is in the output -- krb5 1.2.7's krb5-config doesn't exit
	with an error when built without krb4 support

2005-10-04:
	* configure.ac: sort out --with-krb4/--without-krb4 logic so that it
	defaults to use-krb4-if-available.
	* src/session.c, src/stash.c, src/tokens.c, src/userinfo.c: add missing
	inclusion of <limits.h>

2005-08-22:
	* configure.ac: add maintainer mode.  Add definitions so that the
	preprocessed man pages will be able to omit portions which pertain to
	options not selected at compile-time (i.e., AFS).
	* src/afslog.c, src/afslog.h: add (not yet tested) -p flag support.
	* noafs.c: update for changed prototype for minikafs_log().

2005-08-15:
	* src/password.c(pam_sm_chauthtok): save the old password as the
	PAM_OLDAUTHTOK item, not the PAM_AUTHTOK item.  Apparently libpam
	doesn't do anything with these (patch from Michael Calmer).
	* src/password.c(pam_sm_chauthtok): double-check that we don't
	get NULL as an old or new password (patch from Michael Calmer).
	* src/password.c(pam_sm_chauthtok): better match the behavior of
	pam_unix and pam_ldap by treating "use_authtok" as an indication
	that PAM_AUTHTOK *has* to have been set already, and otherwise
	that it's okay to prompt (patch from Michael Calmer).

2005-07-12:
	* src/password.c(pam_sm_chauthtok): check the result_code returned by
	krb5_change_password() as well as the return code (patch from Dan Perry)

2005-06-21:
	* src/tokens.c(tokens_obtain): don't skip a cell if it's both the
	local/home and in the set of explicitly-specified cells (Jack Neely).

2005-06-20:
	* configure.ac: fix --disable-Werror, --disable-extra-warnings so that
	they actually work as expected.
	* src/shmem.c, src/stash.c, src/storetmp.c: fix compile warnings.

2005-06-17:
	* src/minikafs.c,src/minikafs.h: add a variant of cell_of_file which
	walks up the tree if it fails.