@@ -2,13 +2,18 @@
          screensaver should fetch new credentials and tokens.  Be careful that
          you don't invoke the authentication function with the "tokens" flag,
          which creates a new PAG, if you want this to be useful.
+	 As of this writing, at least xscreensaver calls pam_setcred() with the
+	 proper flag to signal that credentials should be refreshed.  Other
+	 screen saver applications may not.
        * new "external" option for use with OpenSSH's GSSAPI authentication
          with credential delegation and AFS, *should* work with anything which
-         uses GSSAPI and accepts delegated credentials
+         uses GSSAPI, accepts delegated credentials, and sets KRB5CCNAME in
+	 the PAM environment
        * new "use_shmem" option for use with OpenSSH's privilege separation mode
        * credential and renewal lifetimes can now be given either as krb5-style
          times or as numbers of seconds
        * new "ignore_unknown_principal"/"ignore_unknown_spn" option
+       * new "krb4_convert_524" option
        * configure can now set the default location of the system keytab
        * configure disables AFS support except on Linux (for now), but can
          be overridden either way
